force-app/main/default/objects/ZuoraQuoteStatusInctructionSettings__mdt/ZuoraQuoteStatusInctructionSettings__mdt.object-meta.xml
<CustomObject>
    <label>Zuora Quote Status Inctruction Setting</label>
    <pluralLabel>Zuora Quote Status Inctruction Settings</pluralLabel>
</CustomObject>