force-app/main/default/objects/ZuoraQuoteStatusInctructionSettings__mdt/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Subscription</fullName>
                <default>true</default>
                <label>New Subscription</label>
            </value>
            <value>
                <fullName>Amend Subscription</fullName>
            </value>
            <value>
                <fullName>Renew Subscription</fullName>
            </value>
            <value>
                <fullName>Cancel Subscription</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>