force-app/main/default/objects/ZuoraQuoteStatusInctructionSettings__mdt/fields/QuoteBusinessType__c.field-meta.xml
<CustomField>
    <fullName>QuoteBusinessType__c</fullName>
    <label>QuoteBusinessType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New Sale</label>
            </value>
            <value>
                <fullName>Co-Term Upsell</fullName>
            </value>
            <value>
                <fullName>Co-Term Upsell + Renewal</fullName>
            </value>
            <value>
                <fullName>Feature Update</fullName>
            </value>
            <value>
                <fullName>Feature Update + Renewal (with/without upsell)</fullName>
            </value>
            <value>
                <fullName>Renewal Only</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Renewal (with/without upsell)</fullName>
            </value>
            <value>
                <fullName>Feature Update + Renewal</fullName>
                <isActive>false</isActive>
                <label>Feature Update + Renewal</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>