force-app/main/default/objects/ZuoraQuoteStatusInctructionSettings__mdt/fields/Renewal_by_client_confirmation__c.field-meta.xml
<CustomField>
    <fullName>Renewal_by_client_confirmation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewal by Renewal Link</label>
    <type>Checkbox</type>
</CustomField>