force-app/main/default/objects/ZuoraQuoteStatusInctructionSettings__mdt/listViews/For_Eden.listView-meta.xml
<ListView>
    <fullName>For_Eden</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>NamespacePrefix</columns>
    <columns>Instructions__c</columns>
    <filterScope>Everything</filterScope>
    <label>For Eden</label>
    <language>en_US</language>
</ListView>